--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "ember-cli-sweetalert",
+  "name": "ember-sweetalert",
   "dependencies": {
     "ember": "~2.5.0",
     "ember-cli-shims": "0.1.1",
