--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "ember-cli": "2.5.0",
     "ember-cli-app-version": "^1.0.0",
     "ember-cli-dependency-checker": "^1.2.0",
-    "ember-cli-htmlbars": "^1.0.3",
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.4.0",
     "ember-cli-jshint": "^1.0.0",
@@ -48,8 +47,12 @@
     "alert"
   ],
   "dependencies": {
+    "broccoli-babel-transpiler": "^5.4.5",
+    "broccoli-funnel": "^0.2.12",
+    "broccoli-merge-trees": "^0.2.4",
     "ember-cli-babel": "^5.1.6",
-    "sweetalert2": "^2.2.7"
+    "ember-cli-htmlbars": "^1.0.3",
+    "sweetalert2": "git+https://github.com/Tonkpils/sweetalert2.git#modules-support"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
