--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "broccoli-merge-trees": "^0.2.4",
     "ember-cli-babel": "^5.1.6",
     "ember-cli-htmlbars": "^1.0.3",
-    "sweetalert2": "git+https://github.com/Tonkpils/sweetalert2.git#modules-support"
+    "sweetalert2": "^3.0.0"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
