--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "engines": {
     "node": ">= 0.10.0"
   },
-  "author": "Leo Correa",
+  "maintainers": [
+    "Leo Correa <lcorr005@gmail.com>",
+    "Guillaume Gérard <guillaume.gerard88@gmail.com>"
+  ],
   "license": "MIT",
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.2",
@@ -36,6 +39,7 @@
     "ember-load-initializers": "^0.5.1",
     "ember-resolver": "^2.0.3",
     "ember-sinon": "0.5.0",
+    "ember-suave": "4.0.0",
     "ember-try": "^0.2.2",
     "loader.js": "^4.0.1"
   },
@@ -44,14 +48,13 @@
     "sweetalert",
     "sweetalert2",
     "modal",
-    "alert"
+    "alert",
+    "swal",
+    "sweet"
   ],
   "dependencies": {
-    "broccoli-funnel": "^0.2.12",
-    "broccoli-merge-trees": "^0.2.4",
     "ember-cli-babel": "^5.1.6",
-    "ember-cli-htmlbars": "^1.0.3",
-    "sweetalert2": "3.0.0"
+    "ember-cli-htmlbars": "^1.0.3"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
