--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,9 @@ before_install:
   - export PATH=$HOME/.yarn/bin:$PATH
 
 install:
+  - yarn global add bower
   - yarn install --no-lockfile --non-interactive
+  - bower install
 
 script:
   - yarn lint:js
