--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "repository": "https://github.com/Tonkpils/ember-sweetalert",
   "dependencies": {
+    "ember-auto-import": "^1.2.19",
     "ember-cli-babel": "^6.6.0",
     "sweetalert2": "^7.24.2"
   },
