--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-sweetalert",
-  "version": "1.1.0",
+  "version": "2.0.0-alpha.1",
   "description": "Ember Sweet Alerts with SweetAlert2",
   "scripts": {
     "build": "ember build --environment=production",
